2.2.0:
- New: 'Extra field' option on shopping list page, can display last price with server v3.2.0 (#434)
- New: Shopping mode now groups items like on shopping list page (#430)
- New: Open Beauty Facts lookup as second online source (#257)
- New: Product option "Treat opened as out of stock" is available for server v3.2.0
- Improved: Open button on consume page is now checkbox
- Improved: Product search on stock overview is now fuzzy search (#486)
- Fixed: App could show old data when page loading was interrupted (#409)
- Fixed: Open action now works with quickmode (#500)
- Fixed: Unwanted linking between grouping option from stock & shopping list page

2.1.1:
- New: Support for grocy server 3.2.0
- New: Login flow for Home Assistant contains scanner for long-lived access token QR code
- Improved: Filter for opened products was added on stock overview page
- Improved: Items marked as done on shopping list are slightly greyed out (#498)
- Improved: Additional error descriptions for Home Assistant on login page
- Improved: Connection improvements for Home Assistant (#249)
- Fixed: Crash when phone was rotated after successful barcode scan (#487)
- Fixed: Crash with ZXing scanner on Android versions below Android 7 (#425)

2.1.0:
- New: Barcodes are now editable on master product page (thanks @DHM47 for the initial work) (#391)
- New: Quantity unit conversions are now editable on master product page (#396)
- New: Grouping feature for stock overview like on server
- New: Grouping feature for shopping list which allows group by default store (#430)
- Improved: Unnecessary bottom sheets in master data section were removed
- Improved: Master product page has new button (save without closing) to add barcodes after creation
- Improved: Workflow for master data pages with keyboard
- Improved: Navigation menu has less horizontal entries, transaction pages are in one row
- Improved: Added option to show product description on shopping mode page (#443)