@@ -251,7 +251,6 @@
           <xyz.zedler.patrick.grocy.view.FilterChip
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             app:data="@{viewModel.filterChipLiveDataExtraField}"/>
 
         </LinearLayout>
