@@ -1,4 +1,5 @@
 2.2.0:
+- New: 'Extra field' option on stock overview page for additional info
 - New: 'Extra field' option on shopping list page, can display last price with server v3.2.0 (#434)
 - New: Shopping mode now groups items like on shopping list page (#430)
 - New: Open Beauty Facts lookup as second online source (#257)
